--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-grpcio>=1.10.0
-grpcio-tools>=1.10.0
-protol>=0.0.3
-python-dotenv>=0.8.2
+coverage==4.5.1
+grpcio-tools==1.11.0
+grpcio==1.11.0
+protobuf==3.5.2.post1
+protol==0.0.3
+pytest==3.5.0
+python-dotenv==0.8.2
