--- a/viewer/package.json
+++ b/viewer/package.json
@@ -30,42 +30,49 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@babel/cli": "7.0.0-beta.42",
-    "@babel/core": "7.0.0-beta.42",
-    "@babel/node": "7.0.0-beta.42",
-    "@babel/plugin-proposal-class-properties": "7.0.0-beta.42",
-    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.42",
-    "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.42",
-    "@babel/plugin-transform-react-constant-elements": "7.0.0-beta.42",
-    "@babel/plugin-transform-react-inline-elements": "7.0.0-beta.42",
-    "@babel/plugin-transform-react-jsx-source": "7.0.0-beta.42",
-    "@babel/plugin-transform-runtime": "7.0.0-beta.42",
-    "@babel/preset-env": "7.0.0-beta.42",
-    "@babel/preset-react": "7.0.0-beta.42",
-    "@babel/runtime": "7.0.0-beta.42",
-    "@babel/template": "7.0.0-beta.42",
+    "@babel/cli": "7.0.0-beta.46",
+    "@babel/core": "7.0.0-beta.46",
+    "@babel/node": "7.0.0-beta.46",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.46",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.46",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.46",
+    "@babel/plugin-transform-react-constant-elements": "7.0.0-beta.46",
+    "@babel/plugin-transform-react-inline-elements": "7.0.0-beta.46",
+    "@babel/plugin-transform-react-jsx-source": "7.0.0-beta.46",
+    "@babel/plugin-transform-runtime": "7.0.0-beta.46",
+    "@babel/preset-env": "7.0.0-beta.46",
+    "@babel/preset-react": "7.0.0-beta.46",
+    "@babel/runtime": "7.0.0-beta.46",
+    "@babel/template": "7.0.0-beta.46",
     "@zeit/next-sass": "^0.1.2",
     "axios": "^0.18.0",
     "babel-eslint": "^8.2.3",
     "body-parser": "^1.18.2",
-    "cli-highlight": "^1.2.3",
+    "cli-highlight": "^2.0.0",
     "cookie-parser": "^1.4.3",
     "copy-webpack-plugin": "^4.5.1",
+    "docopt": "^0.6.2",
+    "docopt-cleanse": "^0.1.0",
     "dotenv": "^5.0.1",
+    "dotenv-extended": "^2.0.2",
+    "dotenv-parse-variables": "^0.1.0",
     "eslint": "^4.19.1",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-react": "^7.7.0",
     "express": "^4.16.3",
     "google-protobuf": "^3.5.0",
-    "grpc": "^1.10.1",
+    "grpc": "^1.11.1",
     "grpc-tools": "^1.6.6",
     "helmet": "^3.12.0",
     "htmlescape": "^1.1.1",
     "is_js": "^0.9.0",
+    "isomorphic-ws": "^4.0.1",
     "lodash": "^4.17.10",
     "material-ui": "^0.20.0",
     "moment": "^2.22.1",
-    "next": "^6.0.0-canary.7",
+    "next": "^6.0.0",
+    "next-redux-saga": "^2.0.1",
+    "next-redux-wrapper": "1.3.5",
     "next-routes": "^1.4.1",
     "node-sass": "^4.9.0",
     "nodemon": "^1.17.3",
@@ -77,12 +84,22 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-icons": "^2.2.7",
+    "react-redux": "^5.0.7",
     "react-tap-event-plugin": "^3.0.2",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-form": "^7.3.0",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.2.0",
     "rotating-file-stream": "^1.3.6",
+    "sockette": "^2.0.0",
     "spdy": "^3.4.7",
     "styled-jsx-plugin-sass": "^0.2.4",
     "uuid": "^3.2.1",
-    "validator": "^9.4.1"
+    "validator": "^10.0.0",
+    "websocket": "^1.0.26",
+    "ws": "^5.1.1"
   },
   "devDependencies": {}
 }
