--- a/viewer/package.json
+++ b/viewer/package.json
@@ -56,48 +56,48 @@
     "dotenv": "^5.0.1",
     "dotenv-extended": "^2.0.2",
     "dotenv-parse-variables": "^0.1.0",
-    "eslint": "^4.19.1",
+    "eslint": "^5.0.0-alpha.2",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-react": "^7.7.0",
     "express": "^4.16.3",
     "google-protobuf": "^3.5.0",
-    "grpc": "^1.11.1",
+    "grpc": "^1.11.3",
     "grpc-tools": "^1.6.6",
     "helmet": "^3.12.0",
     "htmlescape": "^1.1.1",
     "is_js": "^0.9.0",
     "isomorphic-ws": "^4.0.1",
     "lodash": "^4.17.10",
-    "material-ui": "^0.20.0",
+    "material-ui": "^1.0.0-beta.44",
     "moment": "^2.22.1",
-    "next": "^6.0.0",
+    "next": "^6.0.1-canary.0",
     "next-redux-saga": "^2.0.1",
-    "next-redux-wrapper": "1.3.5",
+    "next-redux-wrapper": "2.0.0-beta.4",
     "next-routes": "^1.4.1",
     "node-sass": "^4.9.0",
-    "nodemon": "^1.17.3",
+    "nodemon": "^1.17.4",
     "on-finished": "^2.3.0",
     "on-headers": "^1.0.1",
     "prop-types": "^15.6.1",
     "python-format": "^1.0.2",
-    "qs": "^6.5.1",
+    "qs": "^6.5.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-icons": "^2.2.7",
     "react-redux": "^5.0.7",
     "react-tap-event-plugin": "^3.0.2",
+    "react-transition-group": "^2.3.1",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.3.0",
     "redux-immutable-state-invariant": "^2.1.0",
-    "redux-saga": "^0.16.0",
+    "redux-saga": "^1.0.0-beta.0",
     "redux-thunk": "^2.2.0",
     "rotating-file-stream": "^1.3.6",
-    "sockette": "^2.0.0",
     "spdy": "^3.4.7",
     "styled-jsx-plugin-sass": "^0.2.4",
     "uuid": "^3.2.1",
-    "validator": "^10.0.0",
+    "validator": "^10.1.0",
     "websocket": "^1.0.26",
     "ws": "^5.1.1"
   },
