--- a/viewer/package.json
+++ b/viewer/package.json
@@ -44,7 +44,7 @@
     "@babel/preset-react": "7.0.0-beta.46",
     "@babel/runtime": "7.0.0-beta.46",
     "@babel/template": "7.0.0-beta.46",
-    "@zeit/next-sass": "^0.1.2",
+    "@zeit/next-sass": "^0.2.0",
     "axios": "^0.18.0",
     "babel-eslint": "^8.2.3",
     "body-parser": "^1.18.2",
@@ -56,9 +56,9 @@
     "dotenv": "^5.0.1",
     "dotenv-extended": "^2.0.2",
     "dotenv-parse-variables": "^0.1.0",
-    "eslint": "^5.0.0-alpha.2",
+    "eslint": "^5.0.0-alpha.3",
     "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "^7.8.1",
     "express": "^4.16.3",
     "google-protobuf": "^3.5.0",
     "grpc": "^1.11.3",
@@ -68,11 +68,11 @@
     "is_js": "^0.9.0",
     "isomorphic-ws": "^4.0.1",
     "lodash": "^4.17.10",
-    "material-ui": "^1.0.0-beta.44",
+    "material-ui": "^1.0.0-beta.47",
     "moment": "^2.22.1",
-    "next": "^6.0.1-canary.0",
-    "next-redux-saga": "^2.0.1",
-    "next-redux-wrapper": "2.0.0-beta.4",
+    "next": "^6.0.1",
+    "next-redux-saga": "^3.0.0-beta.2",
+    "next-redux-wrapper": "^2.0.0-beta.6",
     "next-routes": "^1.4.1",
     "node-sass": "^4.9.0",
     "nodemon": "^1.17.4",
@@ -91,13 +91,13 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.3.0",
     "redux-immutable-state-invariant": "^2.1.0",
-    "redux-saga": "^1.0.0-beta.0",
+    "redux-saga": "^1.0.0-beta.1",
     "redux-thunk": "^2.2.0",
     "rotating-file-stream": "^1.3.6",
     "spdy": "^3.4.7",
     "styled-jsx-plugin-sass": "^0.2.4",
     "uuid": "^3.2.1",
-    "validator": "^10.1.0",
+    "validator": "^10.2.0",
     "websocket": "^1.0.26",
     "ws": "^5.1.1"
   },
