--- a/viewer/package.json
+++ b/viewer/package.json
@@ -44,10 +44,16 @@
     "@babel/preset-react": "7.0.0-beta.46",
     "@babel/runtime": "7.0.0-beta.46",
     "@babel/template": "7.0.0-beta.46",
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-free-regular": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/react-fontawesome": "^0.0.19",
     "@zeit/next-sass": "^0.2.0",
     "axios": "^0.18.0",
     "babel-eslint": "^8.2.3",
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.1.1",
     "cli-highlight": "^2.0.0",
     "cookie-parser": "^1.4.3",
     "copy-webpack-plugin": "^4.5.1",
@@ -68,7 +74,6 @@
     "is_js": "^0.9.0",
     "isomorphic-ws": "^4.0.1",
     "lodash": "^4.17.10",
-    "material-ui": "^1.0.0-beta.47",
     "moment": "^2.22.1",
     "next": "^6.0.1",
     "next-redux-saga": "^3.0.0-beta.2",
@@ -84,9 +89,11 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-icons": "^2.2.7",
+    "react-popper": "^0.10.4",
     "react-redux": "^5.0.7",
     "react-tap-event-plugin": "^3.0.2",
     "react-transition-group": "^2.3.1",
+    "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.3.0",
